# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@gutil//gutil:diff_test.bzl", "cmd_diff_test")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
# load("@rules_cc//cc:cc_library.bzl", "cc_library")
# load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "dataplane_validation",
    srcs = ["dataplane_validation.cc"],
    hdrs = ["dataplane_validation.h"],
    deps = [
        ":failure_post_processing",
        ":label",
        ":labeler",
        ":output_writer",
        ":packet_injection",
        ":packet_trace",
        ":packet_trace_cc_proto",
        ":port_id_map",
        ":switch_api",
        ":test_insights",
        ":test_run_validation",
        ":test_vector",
        ":test_vector_cc_proto",
        ":user_provided_packet_test_vector",
        ":validation_result",
        "//dvaas/thinkit_tests:dvaas_regression_cc_proto",
        "//lib/gnmi:gnmi_helper",
        "//lib/gnmi:openconfig_cc_proto",
        "//lib/p4rt:p4rt_port",
        "@p4_infra//p4_pdpi:entity_keys",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:sequencing",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//p4_infra/p4_runtime:p4_runtime_session_extras",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@p4_infra//string_encodings:hex_string",
        "//p4_symbolic/packet_synthesizer:coverage_goal_cc_proto",
        "//p4_symbolic/packet_synthesizer:packet_synthesizer_cc_proto",
        "//sai_p4/instantiations/google:p4_versions",
        "//tests/lib:switch_test_setup_helpers",
        "//thinkit:mirror_testbed",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@googletest//:gtest",
        "@gutil//gutil:proto",
        "@gutil//gutil:proto_ordering",
        "@gutil//gutil:status",
        "@gutil//gutil:test_artifact_writer",
        "@gutil//gutil:timer",
        "@gutil//gutil:version",
    ],
)

cc_test(
    name = "dataplane_validation_test",
    srcs = ["dataplane_validation_test.cc"],
    linkstatic = True,
    deps = [
        ":packet_trace",
        ":packet_trace_cc_proto",
        "@abseil-cpp//absl/strings:string_view",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto",
        "@gutil//gutil:testing",
    ],
)

cmd_diff_test(
    name = "dataplane_validation_diff_test",
    actual_cmd = " | ".join([
        "$(execpath :dataplane_validation_test)",
        # Strip unnecessary lines for golden testing.
        "sed '1,/^\\[ RUN/d'",  # Strip everything up to a line beginning with '[ RUN'.
        "sed '/^\\[/d'",  # Strip every line beginning with '['.
    ]),
    expected = "dataplane_validation_test.expected",
    tools = [":dataplane_validation_test"],
)

cc_library(
    name = "validation_result",
    srcs = ["validation_result.cc"],
    hdrs = ["validation_result.h"],
    deps = [
        ":packet_trace",
        ":packet_trace_cc_proto",
        ":test_run_validation",
        ":test_vector_cc_proto",
        ":test_vector_stats",
        "//p4_symbolic/packet_synthesizer:packet_synthesizer_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "validation_result_test",
    srcs = ["validation_result_test.cc"],
    deps = [
        ":test_vector_cc_proto",
        ":validation_result",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "output_writer",
    hdrs = ["output_writer.h"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "packet_injection",
    srcs = ["packet_injection.cc"],
    hdrs = ["packet_injection.h"],
    deps = [
        ":port_id_map",
        ":test_vector",
        ":test_vector_cc_proto",
        "//lib/p4rt:p4rt_port",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:ir_utils",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "@p4_infra//packetlib",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "//tests/forwarding:util",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "test_run_validation",
    srcs = ["test_run_validation.cc"],
    hdrs = ["test_run_validation.h"],
    deps = [
        ":switch_api",
        ":test_vector_cc_proto",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:optional",
        "@googletest//:gtest",
        "@gutil//gutil:proto",
        "@gutil//gutil:proto_ordering",
        "@gutil//gutil:status_matchers",
        "@protobuf//:protobuf",
    ],
)

cc_library(
    name = "arriba_test_vector_validation",
    testonly = True,
    srcs = ["arriba_test_vector_validation.cc"],
    hdrs = ["arriba_test_vector_validation.h"],
    deps = [
        ":label",
        ":labeler",
        ":packet_injection",
        ":port_id_map",
        ":test_insights",
        ":test_run_validation",
        ":test_vector",
        ":test_vector_cc_proto",
        ":validation_result",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//p4_infra/p4_runtime:p4_runtime_session_extras",
        "//sai_p4/instantiations/google/test_tools:test_entries",
        "//tests/lib:switch_test_setup_helpers",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/time",
        "@gutil//gutil:proto",
        "@gutil//gutil:test_artifact_writer",
    ],
)

cc_library(
    name = "mirror_testbed_config",
    srcs = ["mirror_testbed_config.cc"],
    hdrs = ["mirror_testbed_config.h"],
    deps = [
        ":port_id_map",
        ":switch_api",
        "//lib/gnmi:gnmi_helper",
        "//lib/gnmi:openconfig_cc_proto",
        "//lib/p4rt:p4rt_port",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//p4_infra/p4_runtime:p4_runtime_session_extras",
        "//tests/lib:switch_test_setup_helpers",
        "//thinkit:mirror_testbed",
        "//thinkit:mirror_testbed_fixture",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:proto",
        "@gutil//gutil:test_artifact_writer",
    ],
)

cc_library(
    name = "switch_api",
    hdrs = ["switch_api.h"],
    deps = ["//p4_infra/p4_runtime:p4_runtime_session"],
)

proto_library(
    name = "packet_trace_proto",
    testonly = False,
    srcs = ["packet_trace.proto"],
    deps = ["@p4_infra//p4_pdpi:ir_proto"],
)

cc_proto_library(
    name = "packet_trace_cc_proto",
    testonly = False,
    deps = [":packet_trace_proto"],
)

proto_library(
    name = "test_vector_proto",
    srcs = ["test_vector.proto"],
    deps = [
        ":packet_trace_proto",
        "@p4_infra//p4_pdpi:ir_proto",
        "@p4_infra//packetlib:packetlib_proto",
    ],
)

cc_proto_library(
    name = "test_vector_cc_proto",
    deps = [":test_vector_proto"],
)

cc_library(
    name = "test_vector",
    testonly = True,
    srcs = ["test_vector.cc"],
    hdrs = ["test_vector.h"],
    deps = [
        ":test_vector_cc_proto",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//packetlib",
        "@p4_infra//packetlib:bit_widths",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@p4_infra//string_encodings:hex_string",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@re2//:re2",
    ],
)

cc_test(
    name = "test_vector_test",
    srcs = ["test_vector_test.cc"],
    deps = [
        ":test_vector",
        ":test_vector_cc_proto",
        "@p4_infra//packetlib",
        "@p4_infra//packetlib:bit_widths",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "test_vector_stats",
    srcs = ["test_vector_stats.cc"],
    hdrs = ["test_vector_stats.h"],
    deps = [
        ":test_vector_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "port_id_map",
    srcs = ["port_id_map.cc"],
    hdrs = ["port_id_map.h"],
    deps = [
        "//lib/gnmi:gnmi_helper",
        "//lib/p4rt:p4rt_port",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@gutil//gutil:status",
        "@gutil//gutil:test_artifact_writer",
    ],
)

cc_test(
    name = "port_id_map_test",
    srcs = ["port_id_map_test.cc"],
    deps = [
        ":port_id_map",
        "//lib/p4rt:p4rt_port",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "user_provided_packet_test_vector",
    testonly = True,
    srcs = ["user_provided_packet_test_vector.cc"],
    hdrs = ["user_provided_packet_test_vector.h"],
    deps = [
        ":test_vector",
        ":test_vector_cc_proto",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//packetlib",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "traffic_generator",
    srcs = ["traffic_generator.cc"],
    hdrs = ["traffic_generator.h"],
    deps = [
        ":dataplane_validation",
        ":label",
        ":mirror_testbed_config",
        ":packet_injection",
        ":packet_trace",
        ":port_id_map",
        ":switch_api",
        ":test_insights",
        ":test_run_validation",
        ":test_vector",
        ":test_vector_cc_proto",
        ":validation_result",
        "//lib/p4rt:p4rt_port",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//p4_infra/p4_runtime:p4_runtime_session_extras",
        "//p4_symbolic/packet_synthesizer:packet_synthesizer_cc_proto",
        "//tests/forwarding:util",
        "//thinkit:mirror_testbed",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/synchronization",
        "@abseil-cpp//absl/time",
        "@gutil//gutil:proto",
        "@gutil//gutil:test_artifact_writer",
    ],
)

cc_library(
    name = "test_insights",
    testonly = True,
    srcs = ["test_insights.cc"],
    hdrs = ["test_insights.h"],
    deps = [
        ":packet_trace_cc_proto",
        ":test_vector",
        ":test_vector_cc_proto",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:proto",
    ],
)

cc_test(
    name = "test_insights_test",
    srcs = ["test_insights_test.cc"],
    linkstatic = True,
    deps = [
        ":test_insights",
        ":test_vector_cc_proto",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cmd_diff_test(
    name = "test_insights_diff_test",
    actual_cmd = " | ".join([
        "$(execpath :test_insights_test)",
        # Strip unnecessary lines for golden testing.
        "sed '1,/^\\[ RUN/d'",  # Strip everything up to a line beginning with '[ RUN'.
        "sed '/^\\[/d'",  # Strip every line beginning with '['.
    ]),
    expected = "test_insights_test.expected",
    tools = [":test_insights_test"],
)

cc_library(
    name = "label",
    srcs = ["label.cc"],
    hdrs = ["label.h"],
    deps = [
        ":test_vector_cc_proto",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "failure_post_processing",
    srcs = ["failure_post_processing.cc"],
    hdrs = ["failure_post_processing.h"],
    deps = [
        ":packet_trace_cc_proto",
        ":test_vector_cc_proto",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:names",
        "//p4_symbolic/packet_synthesizer:packet_synthesizer_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@gutil//gutil:status",
        "@protobuf//:protobuf",
    ],
)

cc_library(
    name = "packet_trace",
    srcs = ["packet_trace.cc"],
    hdrs = ["packet_trace.h"],
    deps = [
        ":packet_trace_cc_proto",
        ":test_vector",
        ":test_vector_cc_proto",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:proto",
        "@gutil//gutil:test_artifact_writer",
    ],
)

cc_test(
    name = "packet_trace_test",
    srcs = ["packet_trace_test.cc"],
    deps = [
        ":packet_trace",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:test_artifact_writer",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "labeler",
    srcs = ["labeler.cc"],
    hdrs = ["labeler.h"],
    deps = [
        ":packet_trace_cc_proto",
        ":test_vector_cc_proto",
        "@p4_infra//netaddr:ipv4_address",
        "@p4_infra//netaddr:ipv6_address",
        "@p4_infra//netaddr:mac_address",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
        "@gutil//gutil:status",
        "@re2//:re2",
    ],
)

cc_test(
    name = "labeler_test",
    srcs = ["labeler_test.cc"],
    deps = [
        ":labeler",
        ":packet_trace_cc_proto",
        ":test_vector_cc_proto",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

# go/golden-test-with-coverage
cc_test(
    name = "user_provided_packet_test_vector_test",
    srcs = ["user_provided_packet_test_vector_test.cc"],
    linkstatic = True,
    deps = [
        ":test_vector",
        ":test_vector_cc_proto",
        ":user_provided_packet_test_vector",
        "@p4_infra//p4_pdpi:test_p4info_cc",
        "@p4_infra//packetlib",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:collections",
        "@gutil//gutil:proto",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
        "@protobuf//:protobuf",
    ],
)

cmd_diff_test(
    name = "user_provided_packet_test_vector_diff_test",
    actual_cmd = " | ".join([
        "$(execpath :user_provided_packet_test_vector_test)",
        # Strip unnecessary lines for golden testing.
        "sed '1,/^\\[ RUN/d'",  # Strip everything up to a line beginning with '[ RUN'.
        "sed '/^\\[/d'",  # Strip every line beginning with '['.
    ]),
    expected = "user_provided_packet_test_vector_test.expected",
    tools = [":user_provided_packet_test_vector_test"],
)

# go/golden-test-with-coverage
cc_test(
    name = "test_vector_stats_test",
    srcs = ["test_vector_stats_test.cc"],
    linkstatic = True,
    deps = [
        ":test_vector_cc_proto",
        ":test_vector_stats",
        "@googletest//:gtest_main",
        "@gutil//gutil:testing",
    ],
)

cmd_diff_test(
    name = "test_vector_stats_diff_test",
    actual_cmd = " | ".join([
        "$(execpath :test_vector_stats_test)",
        # Strip unnecessary lines for golden testing.
        "sed '1,/^\\[ RUN/d'",  # Strip everything up to a line beginning with '[ RUN'.
        "sed '/^\\[/d'",  # Strip every line beginning with '['.
    ]),
    expected = "test_vector_stats_test.expected",
    tools = [":test_vector_stats_test"],
)

# go/golden-test-with-coverage
cc_test(
    name = "test_run_validation_test_runner",
    srcs = ["test_run_validation_test_runner.cc"],
    linkstatic = True,
    deps = [
        ":test_run_validation",
        ":test_vector_cc_proto",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status:statusor",
        "@gutil//gutil:testing",
    ],
)

cmd_diff_test(
    name = "test_run_validation_golden_test",
    actual_cmd = "$(execpath :test_run_validation_test_runner)",
    expected = ":test_run_validation_test.expected.output",
    tools = [":test_run_validation_test_runner"],
)

cc_test(
    name = "test_run_validation_test",
    srcs = ["test_run_validation_test.cc"],
    deps = [
        ":switch_api",
        ":test_run_validation",
        ":test_vector_cc_proto",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
        "@protobuf//:protobuf",
    ],
)

cc_test(
    name = "failure_post_processing_test",
    srcs = ["failure_post_processing_test.cc"],
    deps = [
        ":failure_post_processing",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)
